# zed

./: Cargo.toml
.github/workflows/: sync_upstream.yml
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_panel.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs
crates/zed_i18n/: Cargo.toml
crates/zed_i18n/locales/: zh-CN.json
crates/zed_i18n/src/: zed_i18n.rs
docs/src/cn_bee/: AI功能架构概览.md  Windows编译笔记.md
